# zips

./: .gitignore  Cargo.toml  LICENSE  README.md
.devcontainer/: devcontainer.json
.github/workflows/: cargo-publish.yml  rust.yml  test.yml
src/: lib.rs
tests/: test_option.rs  test_result.rs
