[package]
name = "zips"
description = "macro for zipping more than just 2 instances of Option<T>"
version = "0.1.3"
edition = "2021"
author = "Carter Canedy"
email = "cartercanedy42@gmail.com"
repository = "https://github.com/cartercanedy/zips"
license = "MIT"
license-file="LICENSE.txt"

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1.0.86"
quote = "1.0.36"
syn = { version = "2.0.71", features = ["parsing", "derive", "proc-macro", "printing"], default-features = false }
