[package]
name = "zips"
description = "Macros for wrapping up a bunch of Option<T>'s/Result<T, E>'s into a single Option<(T [, T...])>"
version = "0.1.6"
edition = "2021"
authors = ["Carter Canedy <cartercanedy42@gmail.com>"]
repository = "https://github.com/cartercanedy/zips"
license = "MIT"

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1.0.86"
quote = "1.0.36"
syn = { version = "~2.0.77", features = ["parsing", "derive", "proc-macro", "printing"], default-features = false }
